# Copyright (c) David Hubbard 2017. Licensed under GPLv3.

config("command_config") {
  include_dirs = [ get_path_info("../..", "abspath" ) ]
}

static_library("command") {
  sources = [
    "command.cpp",
    "fence.cpp",
    "pipeline.cpp",
    "render.cpp",
    "shader.cpp",
  ]

  deps = [
    "//lib/language",
    "//vendor/VulkanSamples:vulkan",
  ]

  configs -= [ "//gn:no_rtti" ]
  public_configs = [ ":command_config" ]
  public = [
    "command.h",
  ]
}
