# Copyright (c) David Hubbard 2017. Licensed under GPLv3.

config("science_config") {
  include_dirs = [ get_path_info("../..", "abspath" ) ]
}

static_library("science") {
  sources = [
    "science.cpp",
  ]

  deps = [
    "//lib/command",
    "//lib/language",
    "//lib/memory",
    "//vendor/VulkanSamples:vulkan",
  ]

  configs -= [ "//gn:no_rtti" ]
  public_configs = [ ":science_config" ]
  public = [
    "science.h",
  ]
}
